syntax = "proto3";

option java_multiple_files = true;
package pl.pb.grpcexample.grpcbidirectionalstreamingapi;


message AddJoinedUserToChatChatRequest{
  int64 userId = 1;
}

message AddJoinedUserToChatChatResponse{
  int64 countOfJoinedUser = 1;
}


service ChatService{
  rpc AddJoinedUserToChatChat(stream AddJoinedUserToChatChatRequest) returns (stream AddJoinedUserToChatChatResponse);
}